--- a/datastructure1/list.ipynb
+++ b/datastructure1/list.ipynb
@@ -556,12 +556,12 @@
     "   * count()\n",
     "   * index()\n",
     "   * copy()\n",
-    "   * sort    \n"
+    "   * sort()    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
     }
    ],
    "source": [
-    "numbers.pop()#rthe last itememove "
+    "numbers.pop()#remove the last element from list"
    ]
   },
   {
@@ -897,21 +897,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Zeenat jahan\\Documents\\GitHub\\PyDS-MTTF\\datastructure1\\list.ipynb Cell 48\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/list.ipynb#ch0000053?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(d)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Zeenat%20jahan/Documents/GitHub/PyDS-MTTF/datastructure1/list.ipynb#ch0000053?line=1'>2</a>\u001b[0m \u001b[39mdel\u001b[39;00m d\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(d)\n",
     "del d"
@@ -919,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1107,13 +1095,17 @@
     }
    ],
    "source": [
-    "primes=[]\n",
+    "\n",
     "for num  in range(2,1000):\n",
     "    for i in range(2,num):\n",
     "        if num % i == 0:\n",
-    "            break\n",
+    "            break       \n",
     "    else:\n",
-    "        print(num)\n",
+    "      print(num)        \n",
+    "        \n",
+    "       \n",
+    "       \n",
+    "    \n",
     "\n",
     "\n",
     "      \n",
@@ -1124,13 +1116,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prime numbers between 900 and 1000 are:\n",
+      "907\n",
+      "911\n",
+      "919\n",
+      "929\n",
+      "937\n",
+      "941\n",
+      "947\n",
+      "953\n",
+      "967\n",
+      "971\n",
+      "977\n",
+      "983\n",
+      "991\n",
+      "997\n"
+     ]
+    }
+   ],
+   "source": [
+    "lower=900\n",
+    "upper=1000\n",
+    "print(\"prime numbers between\",lower,\"and\",upper,\"are:\")\n",
+    "for num in range (lower,upper+1):\n",
+    "    #all prime no's are greater than 1\n",
+    "    if num>1:\n",
+    "        for i in range(2,num):\n",
+    "            if num%i==0:\n",
+    "                break\n",
+    "        else:\n",
+    "            print(num)    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1147,8 +1180,7 @@
     "    for i in range(2,nun):\n",
     "        if nun % i == 0:\n",
     "            break\n",
-    "        else:\n",
-    "            pass\n",
+    "        \n",
     "    else:\n",
     "        primes.append(nun)\n",
     "print(primes)\n",
@@ -1162,13 +1194,345 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['aleed', 1, 2, 3]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "z=['aleed',1,2,3]\n",
+    "print(z)\n",
+    "z.clear()\n",
+    "print(z)\n"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=[1,2,3,1,2,3,3,3,1,2,1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.count(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.count(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names=['Desmond','Alex','Samus','Jerry','Freddy','August']\n",
+    "names.index('Alex')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names.index('August')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['August', 'Freddy', 'Jerry', 'Samus', 'Alex', 'Desmond']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names.reverse()\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alex', 'August', 'Desmond', 'Freddy', 'Jerry', 'Samus']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names.sort()\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 3, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.sort()\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 3, 3, 3, 2, 2, 2, 2, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.sort(reverse=True)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Samus', 'Jerry', 'Freddy', 'Desmond', 'August', 'Alex']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names.sort(reverse=True)\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Samus', 'Jerry', 'Freddy', 'Desmond', 'August', 'Alex']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backup=names #reference to the same list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backup_v2=names.copy()#copy the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names.remove('Samus')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backup_v2.append('Markus')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jerry', 'Freddy', 'Desmond', 'August', 'Alex']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jerry', 'Freddy', 'Desmond', 'August', 'Alex']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(backup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Samus', 'Jerry', 'Freddy', 'Desmond', 'August', 'Alex', 'Markus']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(backup_v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 6, 9, 6, 7, 12, 13]\n",
+      "[1, 2, 6, 6, 7, 9, 12, 13]\n",
+      "[1, 2, 6, 6, 7, 9, 12, 13]\n",
+      "[13, 12, 9, 7, 6, 6, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=[1,2,6,9,6,7,12,13]\n",
+    "print(x)\n",
+    "x.sort()\n",
+    "print(x)\n",
+    "x.sort(reverse=False)#same as simple sort function\n",
+    "print(x)\n",
+    "x.sort(reverse=True)#reverse in descending order\n",
+    "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
